--- a/Module 7/Ex_7_3_1/pom.xml
+++ b/Module 7/Ex_7_3_1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>Java_ex</artifactId>
+    <artifactId>Ex_7_3_1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -33,8 +33,19 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.6</version>
+            <version>1.4.14</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.4.2.Final</version>
+        </dependency>
+
     </dependencies>
     
 </project>
